Fix: cors 관련 코드 수정
- CorsMVCConfig.java
- cors 설정을 위한 CorsMVCConfig.java 작성

- SecurityConfig.java
- cors 설정을 위한 SecurityConfig.java 코드 수정

- nginx.conf
- nginx 에서 cors 설정이 아닌 애플리케이션에서 cors 설정을 하기 위한 기존 cors 설정 코드 주석 처리